--- a/Client/public/index.html
+++ b/Client/public/index.html
@@ -39,11 +39,9 @@
         <div class="row">
             <div class="col-xs-12">
                 <div class="left-part pull-left">
-                    
+
                 </div>
                 <div class="right-part pull-right hidden-xs">
-
-                    Ask us anything
                     <div class="top-html-block">
                         <div class="social-links">
                         </div>
@@ -66,7 +64,7 @@
             </div>
             <div class="col-sm-3 col-xs-8 logo-wrapper">
                 <div class="qa-logo">
-                    <a href="./index.php" class="qa-logo-link">Localhost Q&amp;A</a>
+                    <a href="./index.php" class="qa-logo-link">Shine Q&amp;A</a>
                 </div>
             </div>
             <div class="donut-navigation col-sm-2 col-xs-3 pull-right">
@@ -109,7 +107,7 @@
             <div class="col-sm-7 navbar-collapse collapse main-nav navbar-left">
                 <ul class="nav navbar-nav inner-drop-nav">
                     <li><a href="./index.php?qa=questions">Questions</a></li>
-                    <li><a href="./index.php?qa=unanswered">Unanswered</a></li>
+                    <li><a href="./index.php?qa=unanswered">Un-answered</a></li>
                     <li class="active"><a href="./index.php?qa=tags">Tags</a></li>
                     <li><a href="./index.php?qa=users">Users</a></li>
                     <li><a href="./index.php?qa=ask">Ask a Question</a></li>
