change html content

--- a/Client/public/index.html
+++ b/Client/public/index.html
@@ -140,7 +140,7 @@
         </div> <!-- END qa-header -->
         <div class="qa-main-shadow clearfix">
             <div class="qa-main-wrapper clearfix row">
-                <div>Content Of The Site</div>
+                <div id="content">Content Of The Site</div>
                 
                 <div class="qa-sidepanel col-md-3 col-xs-12 pull-right">
                     <div class="side-search-bar hidden-xs">
