change html content

--- a/Client/public/index.html
+++ b/Client/public/index.html
@@ -31,9 +31,6 @@
         You need to enable JavaScript to run this app.
     </noscript>
 
-    <div id="root"></div>
-
-
     <header id="top-header">
         <div class="container">
             <div class="row">
@@ -117,53 +114,7 @@
         </nav>
     </header>
 
-    <div class="container">
-        <div class="top-divider"></div>
-    </div>
-    <div class="container visible-xs">
-        <div class="top-search-bar">
-            <form class="search-form" role="form" method="get" action="./index.php?qa=search">
-                <input type="hidden" name="qa" value="search">
-                <div class="input-group">
-                    <input type="text" name="q" value="" class="qa-search-field form-control" placeholder="Search">
-                    <span class="input-group-btn">
-<button type="submit" value="" class="btn qa-search-button"><span class="fa fa-search"></span></button>
-</span>
-                </div>
-            </form>
-        </div>
-    </div>
-    <div class="qa-body-wrapper container">
-        <div class="qa-header clearfix">
-            <div class="qa-header-clear clearfix">
-            </div>
-        </div> <!-- END qa-header -->
-        <div class="qa-main-shadow clearfix">
-            <div class="qa-main-wrapper clearfix row">
-                <div id="content">Content Of The Site</div>
-                
-                <div class="qa-sidepanel col-md-3 col-xs-12 pull-right">
-                    <div class="side-search-bar hidden-xs">
-                        <form class="search-form" role="form" method="get" action="./index.php?qa=search">
-                            <input type="hidden" name="qa" value="search">
-                            <div class="input-group">
-                                <input type="text" name="q" value="" class="qa-search-field form-control"
-                                       placeholder="Search">
-                                <span class="input-group-btn">
-<button type="submit" value="" class="btn qa-search-button"><span class="fa fa-search"></span></button>
-</span>
-                            </div>
-                        </form>
-                    </div>
-                    <div class="qa-sidebar">
-                        Welcome to Localhost Q&amp;A, where you can ask questions and receive answers from other members
-                        of
-                        the community.
-                    </div>
-                </div>
-            </div> <!-- END main-wrapper -->
-        </div> <!-- END main-shadow -->
-    </div> <!-- END body-wrapper -->
+    <div></div>
     <div class="donut-site-stats-bottom">
         <div class="container">
             <div class="row">
