--- a/Client/public/index.html
+++ b/Client/public/index.html
@@ -114,7 +114,9 @@
         </nav>
     </header>
 
-    <div></div>
+    <div id="content">
+
+    </div>
     <div class="donut-site-stats-bottom">
         <div class="container">
             <div class="row">
