change html content

--- a/Client/public/index.html
+++ b/Client/public/index.html
@@ -31,135 +31,7 @@
         You need to enable JavaScript to run this app.
     </noscript>
 
-    <header id="top-header">
-        <div class="container">
-            <div class="row">
-                <div class="col-xs-12">
-                    <div class="left-part pull-left">
-
-                    </div>
-                    <div class="right-part pull-right hidden-xs">
-                        <div class="top-html-block">
-                            <div class="social-links">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </header>
-    <header id="nav-header">
-        <nav id="nav" class="navbar navbar-static-top"
-             role="navigation" data-spy="affix" data-offset-top="120">
-            <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
-                            data-target=".navbar-collapse">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="glyphicon glyphicon-menu-hamburger"></span>
-                    </button>
-                </div>
-                <div class="col-sm-3 col-xs-8 logo-wrapper">
-                    <div class="qa-logo">
-                        <a href="./index.php" class="qa-logo-link">Shine Q&amp;A</a>
-                    </div>
-                </div>
-                <div class="donut-navigation col-sm-2 col-xs-3 pull-right">
-                    <ul class="nav navbar-nav navbar-right user-nav">
-                        <li class="dropdown user-dropdown">
-                            <a href="#" class="navbar-user-img dropdown-toggle" data-toggle="dropdown">
-                                <img src="./qa-theme/Donut-theme/images/default-profile-pic.png" width="30" height="30"
-                                     class="qa-avatar-image" alt=""> </a>
-                            <ul class="dropdown-menu" role="menu" id="user-dropdown-menu">
-                                <li class="dropdown-header">Signed in as javad</li>
-                                <li>
-                                    <a href="./index.php?qa=user&amp;qa_1=javad">
-                                        <span class="fa fa-user"></span>
-                                        javad </a>
-                                </li>
-                                <li>
-                                    <a href="./index.php?qa=messages">
-                                        <span class="fa fa-envelope"></span>
-                                        Private messages </a>
-                                </li>
-                                <li>
-                                    <a href="./index.php?qa=user&amp;qa_1=javad">
-                                        <span class="fa fa-money"></span>
-                                        100 Points </a>
-                                </li>
-                                <li>
-                                    <a href="./index.php?qa=updates">
-                                        <span class="fa fa-bell-o"></span>
-                                        My Updates </a>
-                                </li>
-                                <li>
-                                    <a href="./index.php?qa=logout">
-                                        <span class="fa fa-sign-out"></span>
-                                        Logout </a>
-                                </li>
-                            </ul>
-                        </li>
-                    </ul>
-                </div>
-                <div class="col-sm-7 navbar-collapse collapse main-nav navbar-left">
-                    <ul class="nav navbar-nav inner-drop-nav">
-                        <li><a href="./question">Questions</a></li>
-                        <li><a href="./unanswered">Un-answered</a></li>
-                        <li class="active"><a href="./tags">Tags</a></li>
-                        <li><a href="./users">Users</a></li>
-                        <li><a href="./ask">Ask a Question</a></li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </header>
-
-    <div id="content">
-
-    </div>
-    <div class="donut-site-stats-bottom">
-        <div class="container">
-            <div class="row">
-                <div class="stats-wrap">
-                    <div class="count-item"><span class="count-data">1</span> question</div>
-                    <div class="count-item"><span class="count-data">1</span> answer</div>
-                    <div class="count-item"><span class="count-data">0</span> comments</div>
-                    <div class="count-item"><span class="count-data">2</span> users</div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <footer class="donut-footer">
-        <a class="donut-top"><span class="fa fa-chevron-up"></span></a>
-        <div class="container">
-            <div class="qa-footer">
-                <div class="qa-nav-footer">
-                    <div class="qa-nav-footer-clear clearfix">
-                    </div>
-                </div>
-                <div class="footer-social">
-                    <ul>
-                    </ul>
-                </div>
-                <div class="footer-bottom">
-                    <div class="qa-attribution">
-                        <a href="https://github.com/amiyasahu/Donut">Donut Theme</a> <span class="fa fa-code"></span>
-                        with
-                        <span class="fa fa-heart"></span> by <a href="http://amiyasahu.github.io">Amiya Sahu</a>
-                    </div>
-                    <div class="donut-copyright">
-                        <span class="fa fa-copyright"></span>
-                        Donut theme
-                    </div>
-                </div>
-                <div class="qa-footer-clear clearfix">
-                </div>
-            </div> <!-- END qa-footer -->
-        </div> <!--END Container-->
-    </footer> <!-- END footer -->
-    <div style="position:absolute; left:-9999px; top:-9999px;">
-        <span id="qa-waiting-template" class="qa-waiting fa fa-spinner fa-spin"></span>
-    </div>
+    <div id="root"></div>
 </body>
 
 </html>
